force-app/main/default/objects/Study_Voucher_Transaction__c/Study_Voucher_Transaction__c.object-meta.xml
<CustomObject>
    <description>Track the transaction or usage of a study voucher.</description>
    <label>Study Voucher Transaction</label>
    <nameField>
        <displayFormat>SVT-{00000}</displayFormat>
        <label>Study Voucher Transaction #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Voucher Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>