force-app/main/default/objects/Study_Voucher_Transaction__c/fields/Study_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Study_Voucher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Voucher</label>
    <referenceTo>Study_Voucher__c</referenceTo>
    <relationshipLabel>Study Voucher Transactions</relationshipLabel>
    <relationshipName>Study_Voucher_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>