force-app/main/default/objects/Study_Voucher_Transaction__c/fields/Transaction_Order__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Order</label>
    <referenceTo>Transaction_Order__c</referenceTo>
    <relationshipLabel>Study Voucher Transactions</relationshipLabel>
    <relationshipName>Study_Voucher_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>