force-app/main/default/objects/Study_Voucher_Transaction__c/validationRules/Required_Study_Voucher.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Study_Voucher</fullName>
    <active>true</active>
    <description>To ensure that the study voucher is populated.</description>
    <errorConditionFormula>ISBLANK( Study_Voucher__c )</errorConditionFormula>
    <errorDisplayField>Study_Voucher__c</errorDisplayField>
    <errorMessage>The study voucher is required.</errorMessage>
</ValidationRule>