force-app/main/default/objects/Study_Voucher_Transaction__c/validationRules/Validate_Amount_Applied.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Amount_Applied</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Amount_Applied__c)),
NOT(ISBLANK(Amount__c)),
Amount_Applied__c &gt; Amount__c
)</errorConditionFormula>
    <errorDisplayField>Amount_Applied__c</errorDisplayField>
    <errorMessage>The study voucher transaction has exceeded its amount limit.</errorMessage>
</ValidationRule>